Closed Bug 1663631 Opened 5 years ago Closed 5 years ago

The Media Controls stop working after skipping to the next song on Soundcloud

Categories

(Core :: Audio/Video: Playback, defect, P3)

Desktop
All
defect

Tracking

()

VERIFIED FIXED
83 Branch
Tracking Status
firefox80 --- disabled
firefox81 --- disabled
firefox82 --- verified
firefox83 --- verified

People

(Reporter: rdoghi, Assigned: alwu)

References

(Blocks 1 open bug)

Details

Attachments

(3 files)

Attached video 2020-09-08_14h28_16.mp4

[Affected platforms]:
Platforms: Windows 10, MAC OSX, Ubuntu 18.04

[Preconditions]:
Ensure both pref media.hardwaremediakeys.enabled and dom.media.mediasession.enabled are true

Steps :

  1. Launch the Firefox browser and reach https://soundcloud.com/search?q=eminem
  2. Hit play on the first video.
  3. Use the Pause/Play Media Control Key in order to stop and start the song.
  4. Hit the "Next" Media control Key.
  5. Try to Pause/Play the next song using the media control key

Expected Results :
The user should be able to Pause/Play or Skip songs using the Media control Keys from the keyboard or from the Virtual Control interface.

Actual Results :
After skipping the first song that plays with sound the Virtual Control interface will disappear and the user will no longer be able to control the song using the Media Control keys from the keyboard.

Please note that the songs are displayed in a form of a playlist even though its the result of a search. (you can see the entire playlist on the button of the screen on the right where music controls are.)
Please also not that If the user plays the Next song manually using the mouse the song can be controlled from the media keys without any issues.

I can reproduce this issue.

Assignee: nobody → alwu
Severity: -- → S2
OS: Windows 10 → All
Priority: -- → P3

Per https://support.mozilla.org/fr/kb/control-audio-or-video-playback-your-headset-or-keyboard and https://developers.soundcloud.com/blog/playback-on-web-at-soundcloud, I think the issue may be that media from web-audio cannot be controlled with media control keys, but I I'll defer to Alastor on this.

Attachment #9176308 - Attachment description: Bug 1663631 - disconnect audible listener when shutdown media sink. → Bug 1663631 - part1 : disconnect audible listener when shutdown media sink.
Attachment #9176308 - Attachment description: Bug 1663631 - part1 : disconnect audible listener when shutdown media sink. → Bug 1663631 - part1 : disconnect audible listener when we recreate a media sink or shutdown.
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/53ac662ab8f9 part1 : disconnect audible listener when we recreate a media sink or shutdown. r=bryce https://hg.mozilla.org/integration/autoland/rev/900440de905d part2 : add a test. r=bryce
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Comment on attachment 9176308 [details]
Bug 1663631 - part1 : disconnect audible listener when we recreate a media sink or shutdown.

Beta/Release Uplift Approval Request

  • User impact if declined: Sometime users would be not able to control media via media keys on soundcloud after pressing next/previous track
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Follow comment0
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It doesn't introduce new behavior change, the fix is about correcting media audible state in order to let Firefox detecting those audible media and being able to control them via media keys. Also, we have an automation test to cover this issue.
  • String changes made/needed: No
Attachment #9176308 - Flags: approval-mozilla-beta?
Attachment #9176321 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Hi, This issue is verified as fixed Windows 10, Mac Os and Ubuntu 18.04 using our latest nightly build 83.0a1 (2020-09-23).

Comment on attachment 9176308 [details]
Bug 1663631 - part1 : disconnect audible listener when we recreate a media sink or shutdown.

approved for 82.0b3

Attachment #9176308 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9176321 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

This issue is verified as fixed on Windows 10, Mac Os and Ubuntu 18.04 in beta 82.0b3 as well.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: