Bug 1663631 - part1 : disconnect audible listener when we recreate a media sink or shutdown. r=bryce

The audible listener should be kept when the media sink is available. Disconnecting the listener on `StopMediaSink()` would make us not able to receive the audible change after starting the media sink again.

Therefore, we should only disconnect audible listener when we recreate a media sink or shutdown.

Differential Revision: https://phabricator.services.mozilla.com/D90575